added handling for any file type saving all as .bin